# VeritasOrchestra

./: .gitmodules  CMakeLists.txt  README.md
include/Veritas/Orchestra/: Interfaceable.h  LocalModule.h  Message.h  Module.h  ModuleManager.h  Orchestra.h  RemoteModule.h  VO.h
include/Veritas/Orchestra/Computing/: Computing.h  DedicatedManager.h  LocalModule.h  Manager.h  Module.h  ParallelManager.h  Runner.h
include/Veritas/Orchestra/Interfacing/: Context.h  InputInterface.h  Interface.h  Interfacer.h  Interfacing.h  OutputInterface.h  Publisher.h  Replier.h  ReplyInterface.h  RequestInterface.h  Requester.h  Sender.h
include/Veritas/Orchestra/Messaging/: Address.h  Content.h  Encoding.h  Form.h  InputInterface.h  Interface.h  List.h  Message.h  Messaging.h  Number.h  OutputInterface.h
include/Veritas/Orchestra/Routing/: MessageQueue.h  Routing.h
src/: Interfaceable.cpp  LocalModule.cpp  Message.Listener.cpp  Message.cpp  Module.cpp  ModuleManager.cpp  RemoteModule.cpp  VO.cpp
src/Computing/: DedicatedManager.cpp  LocalModule.cpp  Manager.cpp  Module.cpp  ParallelManager.cpp  Runner.cpp
src/Interfacing/: Context.cpp  InputInterface.cpp  Interface.cpp  Interfacer.cpp  OutputInterface.cpp  Publisher.cpp  Replier.cpp  ReplyInterface.cpp  RequestInterface.cpp  Requester.cpp  Sender.cpp
src/Messaging/: Address.cpp  Content.cpp  Encoding.cpp  Form.cpp  InputInterface.cpp  Interface.cpp  List.cpp  Message.cpp  Number.cpp  OutputInterface.cpp
src/Routing/: MessageQueue.cpp
