CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("VeritasOrchestra")

IF(TARGET ${PROJECT_NAME})
RETURN()
ENDIF()

ADD_SUBDIRECTORY(modules/VeritasData)

AUX_SOURCE_DIRECTORY(src SOURCES)

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} VeritasData)
