CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("VeritasOrchestra")

IF(TARGET ${PROJECT_NAME})
RETURN()
ENDIF()

ADD_SUBDIRECTORY(modules/VeritasBuilder)
ADD_SUBDIRECTORY(modules/VeritasData)

AUX_SOURCE_DIRECTORY(src SOURCES)

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} VeritasData)
TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PUBLIC -std=c++11)

GET_PROPERTY(COMPILER TARGET ${PROJECT_NAME} PROPERTY "Compiler")
GET_PROPERTY(PLATFORM TARGET ${PROJECT_NAME} PROPERTY "Platform")

IF(COMPILER STREQUAL "GNU" AND NOT PLATFORM STREQUAL "Android")
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} -Wl,--no-as-needed pthread) # GCC's C++11 requires pthread, using --no-as-needed fix a runtime bug
ENDIF()
